--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "declaration": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": [
       "es2021"
